import { renderHTML, setTitle } from ".";

describe("index", () => {
  beforeEach(async () => {
    await page.setContent(`
      <!DOCTYPE html>
      <html lang="en">
      <head>
        <meta charset="UTF-8">
        <meta name="viewport" content="width=device-width, initial-scale=1.0">
        <meta http-equiv="X-UA-Compatible" content="ie=edge">
        <title>Document</title>
      </head>
      <body></body>
      </html>
    `);
  });

  test("renderHTML", async () => {
    renderHTML(page);
    const content = await page.content();
    expect(content).toMatchSnapshot();
  });

  test("setTitle", async () => {
    setTitle(page, "hello");
    const content = await page.content();
    expect(content).toMatchSnapshot();
  });
});
