// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`index renderHTML 1`] = `
"<!DOCTYPE html><html lang=\\"en\\"><head>
      <meta charset=\\"UTF-8\\">
      <meta name=\\"viewport\\" content=\\"width=device-width, initial-scale=1.0\\">
      <meta http-equiv=\\"X-UA-Compatible\\" content=\\"ie=edge\\">
      <title>Document</title>
    </head>
    <body>
      <div id=\\"app\\">hello</div>
    
    
  </body></html>"
`;

exports[`index setTitle 1`] = `
"<!DOCTYPE html><html lang=\\"en\\"><head>
        <meta charset=\\"UTF-8\\">
        <meta name=\\"viewport\\" content=\\"width=device-width, initial-scale=1.0\\">
        <meta http-equiv=\\"X-UA-Compatible\\" content=\\"ie=edge\\">
        <title>hello</title>
      </head>
      <body>
      
    </body></html>"
`;
